# google-health-local-sync

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
google_health_local_sync/: __init__.py  cli.py  client.py  data_types.py  hermes_install.py  oauth.py  sleep.py  storage.py
google_health_local_sync/hermes_plugin/: README.md  __init__.py  plugin.yaml
tests/: test_data_types.py  test_hermes_install.py  test_latest_and_backfill.py  test_oauth.py  test_sleep.py  test_storage.py  test_sync_features.py  test_token_refresh.py
