[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "google-health-local-sync"
version = "0.1.0"
description = "Local-first Google Health API sync for sleep, activity, vitals, and nutrition logs"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Google Health Local Sync contributors" }]
keywords = ["google-health", "fitbit", "health", "sqlite", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Database",
  "Topic :: Utilities",
]
dependencies = ["PyYAML>=6.0"]

[project.scripts]
google-health-local = "google_health_local_sync.cli:main"

[project.urls]
Homepage = "https://github.com/Wysie/google-health-local-sync"
Repository = "https://github.com/Wysie/google-health-local-sync"
Issues = "https://github.com/Wysie/google-health-local-sync/issues"

[tool.setuptools.package-data]
google_health_local_sync = ["hermes_plugin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
